stripped strings from whitespace and defined details

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <div id="column">
       <div id="home">
         <div id="agenda">
-          <div id="agenda-header">
-            <div class="titel">programma</div>
+          <div class="agenda-header">
+              <div class="titel">programma</div>
           </div>
-          <div id="agenda-content">
-            <a class="item-block" href="http://simplon.nl/?post_type=events&p=18584">
+          <div class="agenda-content">
+            <div class="item-block">
               <div class="item-image" style="background-image: url(https://simplon.nl/content/uploads/2019/07/JoeBuck_web-600x600.jpg)"></div>
               <div class="item-details">
                 <div class="title">Zebra</div>
@@ -26,7 +26,7 @@
                 </div>
               </div>
             </a>
-            <a class="item-block" href="http://simplon.nl/?post_type=events&p=18584">
+            <div class="item-block">
               <div class="item-image" style="background-image: url(https://simplon.nl/content/uploads/2019/07/JoeBuck_web-600x600.jpg)"></div>
               <div class="item-details">
                 <div class="title">Zeehond</div>
@@ -40,7 +40,7 @@
                 </div>
               </div>
             </a>
-            <a class="item-block" href="http://simplon.nl/?post_type=events&p=18584">
+            <div class="item-block">
               <div class="item-image" style="background-image: url(https://simplon.nl/content/uploads/2019/07/JoeBuck_web-600x600.jpg)"></div>
               <div class="item-details">
                 <div class="title">Springbok</div>
